--- a/Poems/main5pt3.css
+++ b/Poems/main5pt3.css
@@ -58,36 +58,46 @@ table {
 }
 
 .container {
-  margin: 50px auto;
-  padding-left: 30px;
-  padding-right: 30px;
-  width: 90%;
-    height: 750px
+  margin: 100px auto;
+  padding-left: 70px;
+  padding-right: 70px;
+    padding-top: 70px;
+    padding-bottom: 70px;
+  width: 50%;
+    background-color: cadetblue;
 }
 
-h1, h2, h3, h6 {
-    font-size: 18pt;
+h1, h2, h4, p {
+    font-size: 30pt;
+    font-weight: lighter;
+    letter-spacing: 70px;
+    text-align: left;
+    line-height: 50px;
+    color: aliceblue;
 }
 
-aside {
-  float: right;
+h6 {
+    font-size: 20pt;
+    font-style: italic;
     text-align: right;
-}
-
-h6{
-    float: right;
-    font-size: 12pt;
-}
-
-h4, p {
-    line-height: 50pt;
     font-weight: bold;
-    font-size: 40px;
+    color: aliceblue;
 }
 
-h1 {
-    font-size: 40px;
-    font-weight: bold
+.ship {
+    letter-spacing: 5pt;
+    font-size: 50pt;
 }
+
+.never {
+    letter-spacing: 5pt;
+    text-align: left;
+    font-size: 50pt;
+    
+}
+
+
+
+
 
 
