--- a/Poems/main5pt5.css
+++ b/Poems/main5pt5.css
@@ -58,36 +58,66 @@ table {
 }
 
 .container {
-  margin: 50px auto;
-  padding-left: 30px;
-  padding-right: 30px;
-  width: 90%;
-    height: 750px
+  margin: 20px auto;
+  padding-left: 70px;
+  padding-right: 70px;
+    padding-top: 70px;
+    padding-bottom: 70px;
+    width: 90%;
+    background-color: cadetblue;
 }
 
-h1, h2, h3, h6 {
-    font-size: 18pt;
+h1, h2, h4, p {
+    font-size: 80pt;
+    font-weight: lighter;
+    letter-spacing: 10pt;
+    text-align: center;
+    line-height: 80pt;
+    color: mintcream;
 }
 
-aside {
-  float: right;
+h6 {
+    font-size: 20pt;
+    font-style: italic;
     text-align: right;
-}
-
-h6{
-    float: right;
-    font-size: 12pt;
-}
-
-h4, p {
-    line-height: 50pt;
     font-weight: bold;
-    font-size: 40px;
+    color: aliceblue;
+}
+
+h2 {
+    text-align: left;
+    font-size: 40pt;
+    line-height: 50pt;
+    
+    
+}
+
+h4{
+    text-align: center;
+    font-size: 18pt; 
+    line-height: 20pt; 
+    font-style: bold;
+    letter-spacing: 5pt;
 }
 
 h1 {
-    font-size: 40px;
-    font-weight: bold
+    font-size: 20pt; 
+    line-height: 18pt;
+    text-align: right
+    
 }
+
+.three {
+    text-align: right; 
+}
+
+p {
+    background-color: aliceblue;
+    color: cadetblue;
+    height: 350pt;
+}
+
+
+
 
 
